--- a/notebooks/epa_exploration.ipynb
+++ b/notebooks/epa_exploration.ipynb
@@ -5,7 +5,7 @@
    "id": "metallic-dutch",
    "metadata": {},
    "source": [
-    "# Applied Study Exploratory Data Analysis\n",
+    "# Applied Study\n",
     "***Sean Steinle***\n",
     "\n",
     "## Table of Contents\n",
@@ -15,8 +15,9 @@
     "    - [Yardline](#Yardline)\n",
     "    - [In Search of a Latent Variable](#In-Search-of-a-Latent-Variable)\n",
     "3. [A Passable Substitute](#A-Passable-Substitute)\n",
+    "4. [Sampling from EPA](#Sampling-from-EPA)\n",
     "\n",
-    "In this notebook, I'll load and explore the dataset that I'm working with for my applied study: the nflfastR dataset. Specifically, we'll look at the distribution of expected points added (EPA) and any other variables that could serve as good predictors of EPA."
+    "In this notebook, I'll load and explore the dataset that I'm working with for my applied study: the nflfastR dataset. Specifically, we'll look at the distribution of expected points added (EPA) and any other variables that could serve as good predictors of EPA. Finally, we'll run our adaptive and non-adaptive Metropolis-Hastings algorithms to sample from the EPA distribution given some predictor."
    ]
   },
   {
@@ -184,7 +185,7 @@
     "plt.xlabel('EPA')\n",
     "plt.ylabel('Count')\n",
     "plt.title('Distribution of EPA for 2023-2024 NFL Season')\n",
-    "plt.savefig('plots/epa_distr_2023.png')"
+    "plt.savefig('../plots/epa_distr_2023.png')"
    ]
   },
   {
@@ -229,7 +230,7 @@
     "plt.xlabel('Yards To First Down')\n",
     "plt.ylabel('Count')\n",
     "plt.title('Distribution of Distances To First Down in 2023-2024 NFL Season')\n",
-    "plt.savefig('plots/distance_2023.png')"
+    "plt.savefig('../plots/distance_2023.png')"
    ]
   },
   {
@@ -367,7 +368,7 @@
     "plt.xlabel('Yards to First Down')\n",
     "plt.ylabel('EPA')\n",
     "plt.title('Relationship between Yards to First Down and EPA in the 2023-2024 NFL Season')\n",
-    "plt.savefig('plots/distance_epa_2023.png')"
+    "plt.savefig('../plots/distance_epa_2023.png')"
    ]
   },
   {
@@ -479,7 +480,7 @@
     "plt.xlabel('Yardline')\n",
     "plt.ylabel('EPA')\n",
     "plt.title('Relationship between Yardline and EPA in the 2023-2024 NFL Season')\n",
-    "plt.savefig('plots/yardline_epa_2023.png')"
+    "plt.savefig('../plots/yardline_epa_2023.png')"
    ]
   },
   {
@@ -1097,7 +1098,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x28de3f023d0>"
+       "<matplotlib.collections.PathCollection at 0x2690432f100>"
       ]
      },
      "execution_count": 21,
@@ -1171,7 +1172,7 @@
     "plt.xlabel('Actual EPA')\n",
     "plt.ylabel('Predicted EPA')\n",
     "plt.title('Actual vs. Predicted EPA for Simple Linear Regression Model with All Presnap Predictors')\n",
-    "plt.savefig('plots/all_presnap_linr.png')"
+    "plt.savefig('../plots/all_presnap_linr.png')"
    ]
   },
   {
@@ -1217,7 +1218,7 @@
     "plt.xlabel('Actual EPA')\n",
     "plt.ylabel('Predicted EPA')\n",
     "plt.title('Actual vs. Predicted EPA for Lasso Model with All Presnap Predictors')\n",
-    "plt.savefig('plots/all_presnap_lasso.png')"
+    "plt.savefig('../plots/all_presnap_lasso.png')"
    ]
   },
   {
@@ -1266,7 +1267,244 @@
     "plt.xlabel('Passing Yards During Play')\n",
     "plt.ylabel('EPA')\n",
     "plt.title('Relationship between Passing Yards in Play and EPA in the 2023-2024 NFL Season')\n",
-    "plt.savefig('plots/passingyds_epa_2023.png')"
+    "plt.savefig('../plots/passingyds_epa_2023.png')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acquired-astrology",
+   "metadata": {},
+   "source": [
+    "## Sampling from EPA\n",
+    "\n",
+    "Pardon the code dump, but first we'll need to copy the Metropolis-Hastings implementations over from the simulation study."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "applicable-conservative",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from numpy.random import uniform, normal, multivariate_normal, exponential, gamma\n",
+    "import scipy as sc\n",
+    "from scipy import stats\n",
+    "from statsmodels.tsa.stattools import acf\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "#metropolis-hastings functions\n",
+    "def sample(data: np.ndarray, N: int, B: int, start_theta: tuple, search_breadth: float=0.5, adaptive: bool=False):\n",
+    "    \"\"\"Takes N samples via the Metropolis-Hastings algorithm, with B burn-in samples.\"\"\"\n",
+    "    theta, Y = start_theta, []\n",
+    "    for b in range(B): #burnin samples\n",
+    "        if adaptive:\n",
+    "            results = adaptive_step(data, theta, search_breadth, Y)\n",
+    "            theta, Y = results['theta'], results['Y']\n",
+    "        else:\n",
+    "            results = step(data, theta, search_breadth)\n",
+    "            theta = results['theta']\n",
+    "    \n",
+    "    samples = []\n",
+    "    for n in range(N): #real samples\n",
+    "        if adaptive:\n",
+    "            results = adaptive_step(data, theta, search_breadth, Y)\n",
+    "            theta, Y = results['theta'], results['Y']\n",
+    "        else:\n",
+    "            results = step(data, theta, search_breadth)\n",
+    "            theta = results['theta']\n",
+    "        samples.append(results)\n",
+    "    return samples\n",
+    "\n",
+    "def step(data: np.ndarray, theta: tuple, search_breadth: float):\n",
+    "    \"\"\"Takes one step in the Metropolis-Hastings algorithm by generating a new theta and comparing to a given theta.\"\"\"\n",
+    "    theta_prime = sample_theta(theta, search_breadth) #sample a new set of parameters\n",
+    "    acceptance_log_prob = calc_acceptance_prob(theta, theta_prime, data, search_breadth) #calculate the probability of acceptance\n",
+    "    acceptance_prob = min(1,np.exp(acceptance_log_prob))\n",
+    "    accepted = acceptance_prob >= uniform() #probabilistically determine acceptance\n",
+    "    return {'accepted': accepted, 'acceptance_prob': acceptance_prob, 'theta': theta_prime if accepted else theta} #return results, update theta if samples accepted\n",
+    "\n",
+    "def sample_theta(theta: tuple, search_breadth: float):\n",
+    "    \"\"\"Samples theta parameters--slope, intercept, and standard deviation.\"\"\"\n",
+    "    a,b,sigma = theta\n",
+    "    a,b = multivariate_normal([a,b], [[search_breadth**2,0],[0,search_breadth**2]])\n",
+    "    sigma = gamma(sigma*search_breadth*500, 1/(search_breadth*500))\n",
+    "    theta = a,b,sigma\n",
+    "    return theta\n",
+    "\n",
+    "def calc_acceptance_prob(theta: tuple, theta_prime: tuple, data: np.ndarray, search_breadth: float):\n",
+    "    \"\"\"Calculates acceptance log-probability by using a Bayesian linear model. Note: all terms are in log-values here,\n",
+    "    so must be exponentiated before determining acceptance against u.\"\"\"    \n",
+    "    theta_likelihood = likelihood(theta, data)\n",
+    "    theta_prior = prior(theta)\n",
+    "    \n",
+    "    theta_p_likelihood = likelihood(theta_prime, data)\n",
+    "    theta_p_prior = prior(theta_prime)\n",
+    "    \n",
+    "    pr = proposal_ratio(theta, theta_prime, search_breadth)\n",
+    "    acceptance_ratio = theta_p_likelihood - theta_likelihood + theta_p_prior - theta_prior + pr\n",
+    "    return acceptance_ratio\n",
+    "\n",
+    "#bayesian functions\n",
+    "def likelihood(theta: tuple, data: np.ndarray):\n",
+    "    \"\"\"Calculates the likelihood component of our linear model by measuring our parameters theta on the given data.\"\"\"\n",
+    "    a,b,sigma = theta\n",
+    "    x,y = data[0],data[1]\n",
+    "    likelihoods = sc.stats.norm.logpdf(y, loc=a*x+b, scale=sigma) #find the likelihood of a sample given a normal distribution specified by our parameters and the data\n",
+    "    return np.sum(likelihoods) #use log likelihood for stability\n",
+    "\n",
+    "def prior(theta: tuple):\n",
+    "    \"\"\"Calculates the prior component of our linear model, specified \"\"\"\n",
+    "    a,b,sigma = theta\n",
+    "    ab_prior = sc.stats.multivariate_normal.logpdf([a,b], [0,0], [[100,0],[0,100]]) #cov defaults to 1\n",
+    "    sigma_prob = sc.stats.gamma.logpdf(sigma, 1, 1)\n",
+    "    return np.sum([ab_prior,sigma_prob])\n",
+    "\n",
+    "def proposal_ratio(theta: tuple, theta_prime: tuple, search_breadth: float):\n",
+    "    \"\"\"Offsets bidirectionality of chained samples.\"\"\"\n",
+    "    a,b,sigma = theta\n",
+    "    a_p,b_p,sigma_p = theta_prime\n",
+    "    old_given_new_ab = sc.stats.multivariate_normal.logpdf([a,b],[a_p,b_p],[[search_breadth**2,0],[0,search_breadth**2]])\n",
+    "    old_given_new_sigma = sc.stats.gamma.logpdf(sigma, sigma_p*search_breadth*500, scale=1/(500*search_breadth))\n",
+    "    old_given_new = old_given_new_ab + old_given_new_sigma\n",
+    "    \n",
+    "    new_given_old_ab = sc.stats.multivariate_normal.logpdf([a_p,b_p],[a,b],[[search_breadth**2,0],[0,search_breadth**2]])\n",
+    "    new_given_old_sigma = sc.stats.gamma.logpdf(sigma_p, sigma*search_breadth*500, scale=1/(500*search_breadth))\n",
+    "    new_given_old = new_given_old_ab - new_given_old_sigma\n",
+    "\n",
+    "    return old_given_new - new_given_old\n",
+    "\n",
+    "#viz functions\n",
+    "def plot_convergence(df: pd.DataFrame):\n",
+    "    \"\"\"Shows convergence of theta for a given results dataframe.\"\"\"\n",
+    "    plt.plot(range(len(df)),df['a'], label='slope')\n",
+    "    plt.plot(range(len(df)),df['b'], label='intercept')\n",
+    "    plt.plot(range(len(df)),df['sigma'], label='variance')\n",
+    "    plt.plot(range(len(df)),df['acceptance_prob'], label='accept_prob')\n",
+    "    plt.xlabel(\"Time Steps\")\n",
+    "    plt.ylabel(\"Values\")\n",
+    "    plt.legend()\n",
+    "    \n",
+    "#highest level functions to coordinate runs\n",
+    "def compare_convergences(starting_positions: list, data: np.ndarray, n_samples: int=20000, adaptive: bool=False, show_plots: bool=False, out_dir: str=''):\n",
+    "    \"\"\"High-level function that coordinates many rounds of the Metropolis-Hastings algorithm,\n",
+    "    each starting at a different position.\"\"\"\n",
+    "    dfs = []\n",
+    "    for start in starting_positions:\n",
+    "        print(f\"working on {start}\")\n",
+    "        samples = sample(data, n_samples, 0, start, 0.1, adaptive) #no burn-in, breadth of search should be 0.1 -- yields a 5% acceptance rate at convergence\n",
+    "\n",
+    "        #aggregate this run's results into dataframe\n",
+    "        df = pd.DataFrame(samples)\n",
+    "        df[['a','b','sigma']] = pd.DataFrame(df['theta'].tolist(), index=df.index)\n",
+    "        df['start'] = str(start) #if this breaks just use an index and map\n",
+    "        df = df.drop(['theta'], axis=1)\n",
+    "        dfs.append(df) #append to the larger results df\n",
+    "        \n",
+    "    df = pd.concat(dfs)\n",
+    "    \n",
+    "    #estimation of parameter over time plots\n",
+    "    for param in ['a','b','sigma']:\n",
+    "        for start_val in df['start'].unique(): #there's definitely a more groupby-y way to do this but this will work!\n",
+    "            param_from_start = df[df['start']==start_val][param]\n",
+    "            plt.plot(range(len(param_from_start)), param_from_start, label=start_val)\n",
+    "        plt.legend()\n",
+    "        plt.xlabel('Time Step')\n",
+    "        plt.ylabel(param)\n",
+    "        plt.title(f\"Evolution of {param.upper()} Parameter Estimate from Different Starts\")\n",
+    "        plt.savefig(f'{out_dir}{param}_estimate_evolution_{\"adaptive\" if adaptive else \"nonadaptive\"}.jpg', bbox_inches='tight')\n",
+    "        if show_plots: plt.show()\n",
+    "        plt.clf()\n",
+    "        \n",
+    "    #autocorrelation plots (I use the ACF metric from statsmodels, see more here: https://github.com/statsmodels/statsmodels/blob/c22837f0632ae8890f56886460c429ebf356bd9b/statsmodels/tsa/stattools.py#L579)\n",
+    "    lag = n_samples/10\n",
+    "    for param in ['a','b','sigma']:\n",
+    "        for start_val in df['start'].unique(): #there's definitely a more groupby-y way to do this but this will work!\n",
+    "            param_from_start = acf(df[df['start']==start_val][param],nlags=lag)\n",
+    "            plt.plot(range(len(param_from_start)), param_from_start, label=start_val)\n",
+    "        plt.legend()\n",
+    "        plt.xlabel('Time Step')\n",
+    "        plt.ylabel(f'Autocorrelation with Lag {lag}')\n",
+    "        plt.title(f\"Autocorrelation for {param.upper()} Parameter Estimate from Different Starts\")\n",
+    "        plt.savefig(f'{out_dir}{param}_autocorrelation_{\"adaptive\" if adaptive else \"nonadaptive\"}.jpg', bbox_inches='tight')\n",
+    "        if show_plots: plt.show()\n",
+    "        plt.clf()\n",
+    "        \n",
+    "    df.to_csv(f'{out_dir}results.csv')\n",
+    "    return df\n",
+    "\n",
+    "#adaptive metropolis-hastings functions (Python NEEDS multiple dispatch!)\n",
+    "def adaptive_step(data: np.ndarray, theta: tuple, search_breadth: float, Y: list):\n",
+    "    \"\"\"Takes one step in the Metropolis-Hastings algorithm by generating a new theta and comparing to a given theta.\"\"\"\n",
+    "    theta_prime = adaptive_sample_theta(theta, search_breadth, Y) #sample a new set of parameters\n",
+    "    acceptance_log_prob = adaptive_calc_acceptance_prob(theta, theta_prime, data, search_breadth, Y) #calculate the probability of acceptance\n",
+    "    acceptance_prob = min(1,np.exp(acceptance_log_prob))\n",
+    "    accepted = acceptance_prob >= uniform() #probabilistically determine acceptance\n",
+    "    if accepted:\n",
+    "        theta = theta_prime\n",
+    "        Y.append(theta_prime)\n",
+    "    return {'accepted': accepted, \n",
+    "            'acceptance_prob': acceptance_prob,\n",
+    "            'theta': theta,\n",
+    "            'Y': Y}\n",
+    "\n",
+    "def adaptive_sample_theta(theta: tuple, search_breadth: float, Y: list):\n",
+    "    \"\"\"Samples theta parameters--slope, intercept, and standard deviation.\"\"\"\n",
+    "    a,b,sigma = theta\n",
+    "    a,b = multivariate_normal([a,b], [[search_breadth**2,0],[0,search_breadth**2]])\n",
+    "    sigma = gamma(sigma*search_breadth*500, 1/(search_breadth*500))\n",
+    "    theta = a,b,sigma\n",
+    "    return theta\n",
+    "\n",
+    "def adaptive_calc_acceptance_prob(theta: tuple, theta_prime: tuple, data: np.ndarray, search_breadth: float, Y: list):\n",
+    "    \"\"\"Calculates acceptance log-probability by using a Bayesian linear model. Note: all terms are in log-values here,\n",
+    "    so must be exponentiated before determining acceptance against u.\"\"\"\n",
+    "    avg_accepted_theta = (0,0,1)\n",
+    "    if len(Y) > 0:\n",
+    "        accepted_a,accepted_b,accepted_sigma = zip(*Y)\n",
+    "        avg_accepted_theta = (np.mean(accepted_a),np.mean(accepted_b),np.mean(accepted_sigma))\n",
+    "    \n",
+    "    theta_likelihood = likelihood(theta, data)\n",
+    "    theta_prior = prior(avg_accepted_theta) if len(Y) > 0 else prior(theta)\n",
+    "    \n",
+    "    theta_p_likelihood = likelihood(theta_prime, data)\n",
+    "    theta_p_prior = prior(theta_prime)\n",
+    "    \n",
+    "    pr = proposal_ratio(theta, theta_prime, search_breadth)\n",
+    "    acceptance_ratio = theta_p_likelihood - theta_likelihood + theta_p_prior - theta_prior + pr\n",
+    "    return acceptance_ratio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "monthly-bermuda",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "working on (0, 0, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = nfl_df[['passing_yards','epa']].dropna().to_numpy()\n",
+    "nonadaptive_df = compare_convergences([(0,0,1),(5,20,1.5),(10,40,2),(20,80,5)], data, 25000, False, True, '../results/applied_study/notebook/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "european-doctor",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = nfl_df[['passing_yards','epa']].dropna().to_numpy()\n",
+    "adaptive_df = compare_convergences([(0,0,1),(5,20,1.5),(10,40,2),(20,80,5)], data, 25000, True, True, '../results/applied_study/notebook/')"
    ]
   }
  ],
